# ALICE-Voice-SaaS

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: Dockerfile.core-engine
frontend/: package.json
frontend/app/: layout.tsx
frontend/app/dashboard/: layout.tsx
frontend/app/dashboard/billing/: page.tsx
frontend/app/gallery/: page.tsx
k8s/: Chart.yaml
k8s/values/: values.yaml
scripts/: smoke-test.sh
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/core-engine/: Cargo.toml
services/core-engine/src/: main.rs
